@@ -1,3 +1,7 @@
+?/?/2006 autofs-5.0.1 rc3
+-------------------------
+- fix handling of autofs specific mount options.
+
 1/9/2006 autofs-5.0.1 rc2
 -------------------------
 - code cleanup.
